--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>cloud-consumer-hystrix-dashboard621</module>
         <module>cloud-gateway-gateway627</module>
         <module>cloud-config-center3344</module>
+        <module>cloud-config-client3355</module>
+        <module>cloud-config-client3366</module>
     </modules>
     <packaging>pom</packaging>
 
