--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
         <module>cloud-config-center3344</module>
         <module>cloud-config-client3355</module>
         <module>cloud-config-client3366</module>
+        <module>cloud-stream-rabbitmq-provider801</module>
+        <module>cloud-stream-rabbitmq-consumer802</module>
+        <module>cloud-stream-rabbitmq-consumer803</module>
     </modules>
     <packaging>pom</packaging>
 
